--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "A simple helpful robot for your Company",
   "dependencies": {
     "hubot": "2.19.0",
-    "hubot-deploy": "0.13.26",
+    "hubot-deploy": "git://github.com/thejonanshow/hubot-deploy",
     "hubot-diagnostics": "0.0.1",
     "hubot-google-images": "0.2.6",
     "hubot-google-translate": "0.2.0",
